syntax = "proto3";
package dream11.od.component.v1;

import "dream11/od/dto/v1/component.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/dream11/odin/proto/gen/go/dream11/od/component/v1";

service ComponentService {
  rpc ListComponentType(ListComponentTypeRequest) returns (ListComponentTypeResponse) {}
  rpc DescribeComponentType(DescribeComponentTypeRequest) returns (DescribeComponentTypeResponse) {}
}

message ListComponentTypeRequest {
  map<string, string> params = 1;
}

message ListComponentTypeResponse {
  repeated dream11.od.dto.v1.Component components = 1;
}

message DescribeComponentTypeRequest {
  string component_type = 1;
  map<string, string> params = 2;
}

message DescribeComponentTypeResponse {
  dream11.od.dto.v1.Component component = 1;
}

