syntax = "proto3";
package dream11.od.dto.v1;

import "google/protobuf/struct.proto";

option go_package = "github.com/dream11/odin/proto/gen/go/dream11/od/dto/v1";

message ComponentDefinition {
  string name = 1;
  string version = 2;
  string type = 3;
  repeated string depends_on = 4;
  google.protobuf.Struct config = 5;
  optional google.protobuf.Struct metadata = 6;
}

message ServiceDefinition {
  string name = 1;
  string version = 2;
  string team = 3;
  repeated ComponentDefinition components = 4;
}

message ComponentProvisioningConfig {
  string component_name = 1;
  string deployment_type = 2;
  google.protobuf.Struct params = 3;
}

message ProvisioningConfig {
  repeated ComponentProvisioningConfig component_provisioning_config = 1;
}
